location access permission changes

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -23,11 +23,43 @@
     <string name="homeFilterResultTxt1">Não foram encontrados resultados!</string>
     <string name="homeFilterResultTxt2">Altere suas preferências.</string>
     <string name="homePreferencesBtn">Botão para alterar suas preferências</string>
-    <string name="lf_preferences">Estou procurando por:</string>
-    <string name="distance_preferences">Distância:</string>
-    <string name="age_preferences">Idade:</string>
-    <string name="new_members">Novos músicos na sua região</string>
-    <string name="new_messages">Novas mensagens</string>
-    <string name="divider_description">Linha divisória</string>
+    <string name="preferencesLookingForTxt">Estou procurando por:</string>
+    <string name="preferencesDistanceLabelTxt">Distância:</string>
+    <string name="preferencesAgeLabelTxt">Idade:</string>
+    <string name="profileNewMembersTxt">Novos músicos na sua região</string>
+    <string name="profileNewMessagesTxt">Novas mensagens</string>
+    <string name="profileDivider">Linha divisória</string>
     <string name="notifications_preferences">Notificações:</string>
+    <string name="profileHeaderBackground">Cabeçalho do perfil do usuário com uma foto de fundo</string>
+    <string name="profileHeaderTransparency">Cor azul com transparência em cima da imagem de fundo</string>
+    <string name="profileHeaderPicture">Foto do usuário</string>
+    <string name="profileHeaderNameTxt">Nome do usuário</string>
+    <string name="profileHabilitiesTxt">Minhas habilidades musicais:</string>
+    <string name="profileGuitarBtn">Botão guitarrista</string>
+    <string name="profileBassBtn">Botão baixista</string>
+    <string name="profileDrumBtn">Botão baterista</string>
+    <string name="profileOtherBtn">Botão de outras habilidades</string>
+    <string name="profileSingerBtn">Botão vocalista</string>
+    <string name="profileAboutLabelTxt">Sobre mim:</string>
+    <string name="profileAboutTxt">Uma pequena descrição sobre mim...</string>
+    <string name="profileLinkedAccountsLabelTxt">Contas Conectadas:</string>
+    <string name="profileSpotifyImg">Ícone do Spotify</string>
+    <string name="profileSpotifySwitch">Switch para ligar a conta ao Spotify</string>
+    <string name="profileMaxCharactersLabel">Máx: 200</string>
+    <string name="profileMaxCharacters">Texto máximo de 200 caractéres</string>
+    <string name="musicianHeaderBackground">Cabeçalho do perfil do músico com uma foto de fundo</string>
+    <string name="musicianHeaderTransparency">Cor azul com transparência em cima da imagem de fundo</string>
+    <string name="musicianHeaderPicture">Foto do músico</string>
+    <string name="musicianHeaderNameTxt">Nome do músico</string>
+    <string name="musicianMessageBtn">Enviar mensagem</string>
+    <string name="musicianAboutTxt">Uma breve descrição sobre o músico</string>
+    <string name="musicianSpotifyBands">Bandas curtidas no Spotify</string>
+    <string name="musicianAboutLabelTxt">Sobre o músico</string>
+    <string name="registerRequiredBirthMessage">Informe sua data de nascimento.</string>
+    <string name="dialogTitle">Permissão necessária</string>
+    <string name="dialogGrant">Conceder</string>
+    <string name="dialogDeny">Negar</string>
+    <string name="dialogMessage">Localização necessária para encontrar músicos próximos e permitir que outros músicos lhe encontrem.</string>
+    <string name="permissionGranted">Permissão concedida!</string>
+    <string name="permissionDenied">Permissão negada!</string>
 </resources>
