User profile data recovery

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Wannaplay</string>
     <string name="preferencesTitle">PREFERÊNCIAS</string>
     <string name="messagesTitle">MENSAGENS</string>
-    <string name="profileTitle">PERFIL</string>
+    <string name="profileTitle">MEU PERFIL</string>
     <string name="loginSloganTxt">Procurando uma galera para fazer um som? Deixa que o Wannaplay te ajuda!</string>
     <string name="loginLoginBtn">Efetuar login com o Facebook</string>
     <string name="loginCopyrightImg">Copyright CRUDZERA Group</string>
