--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="preferencesTitle">PREFERENCES</string>
     <string name="messagesTitle">MESSAGES</string>
-    <string name="profileTitle">PROFILE</string>
+    <string name="profileTitle">MY PROFILE</string>
 
     <!--- LOGIN SCREEN -->
 
