--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -10,7 +10,7 @@
     <string name="registerHello">Olá</string>
     <string name="registerMessage1">Bem-vindo(a), seu perfil está quase pronto!</string>
     <string name="registerMessage2">Precisamos apenas de mais algumas informações.</string>
-    <string name="registerHabilities">Suas habilidades musicais são:</string>
+    <string name="registerHabilities">Sua habilidade musical é:</string>
     <string name="registerBirth">Você nasceu em:</string>
     <string name="registerBirthPicker">Clique para selecionar sua data de nascimento</string>
     <string name="registerBirthDescription">No Wannaplay você pode filtrar músicos pela idade.</string>
@@ -26,15 +26,15 @@
     <string name="preferencesLookingForTxt">Estou procurando por:</string>
     <string name="preferencesDistanceLabelTxt">Distância:</string>
     <string name="preferencesAgeLabelTxt">Idade:</string>
-    <string name="profileNewMembersTxt">Novos músicos na sua região</string>
-    <string name="profileNewMessagesTxt">Novas mensagens</string>
+    <string name="preferencesNewMembersTxt">Novos músicos na sua região</string>
+    <string name="preferencesNewMessagesTxt">Novas mensagens</string>
     <string name="profileDivider">Linha divisória</string>
     <string name="notifications_preferences">Notificações:</string>
     <string name="profileHeaderBackground">Cabeçalho do perfil do usuário com uma foto de fundo</string>
     <string name="profileHeaderTransparency">Cor azul com transparência em cima da imagem de fundo</string>
     <string name="profileHeaderPicture">Foto do usuário</string>
     <string name="profileHeaderNameTxt">Nome do usuário</string>
-    <string name="profileHabilitiesTxt">Minhas habilidades musicais:</string>
+    <string name="profileHabilitiesTxt">Minha habilidade musical:</string>
     <string name="profileGuitarBtn">Botão guitarrista</string>
     <string name="profileBassBtn">Botão baixista</string>
     <string name="profileDrumBtn">Botão baterista</string>
@@ -72,6 +72,8 @@
     <string name="gridMoreIcon">Ícone de ver mais</string>
     <string name="musicianAbilitiesTxt">Habilidades musicais:</string>
     <string name="MusicianTitle">PERFIL DO MÚSICO</string>
-    <string name="profileLogoutBtnTxt">Deslogar</string>
-    <string name="profileLogoutBtn">Botão para deslogar</string>
+    <string name="preferencesLogoutBtnTxt">Deslogar</string>
+    <string name="preferencesLogoutBtn">Botão para deslogar</string>
+    <string name="preferencesAccountOptions">"Opções "</string>
+    <string name="registerRequiredAbilitieshMessage">Por favor selecione pelo menos uma habilidade para continuar!</string>
 </resources>
